--- a/frank/stylesheets/css/single.css
+++ b/frank/stylesheets/css/single.css
@@ -6,7 +6,6 @@
     font-family: Georgia, "Times New Roman", Times, serif; }
     #content.single .post-info .previous a {
       font-size: 13px;
-      line-height: 19px;
       display: block;
       text-align: center; }
     #content.single .post-info .previous nav {
@@ -29,18 +28,15 @@
         background-color: #3d302f; }
   #content.single article header h1 {
     font-size: 24px;
-    line-height: 32px;
     color: #3d302f; }
   #content.single article section h1, #content.single article section h2 {
     margin: 15px 0;
     padding: 0; }
   #content.single article section h1 {
     font-size: 20px;
-    line-height: 30px;
     margin-top: 30px; }
   #content.single article section h2 {
     font-size: 17px;
-    line-height: 27px;
     font-weight: 700; }
   #content.single article dl dd {
     margin-left: 40px; }
@@ -50,7 +46,6 @@
     #content.single #content_primary #excerpt p {
       padding-top: 0;
       font-size: 28px;
-      line-height: 35px;
       font-family: Georgia, "Times New Roman", Times, serif;
       font-style: italic; }
   #content.single #content_primary section {
@@ -73,3 +68,10 @@
     margin: 30px 0;
     border-bottom: 2px solid #f0eceb;
     padding-bottom: 15px; }
+
+/*MOBILE*/
+@media only screen and  (max-width: 767px) {
+  .post-info .previous a:before {
+    content: "Previous Post: "; }
+  .post-info .previous nav {
+    display: none !important; } }
