--- a/frank/stylesheets/scss/index.scss
+++ b/frank/stylesheets/scss/index.scss
@@ -9,7 +9,8 @@
 		margin-bottom:$row-height*2;
 		padding-bottom:5px;
 		border-bottom: 1px $color-light solid;
-		font: $font-small $sans-serif;
+		font-size: $font-small; 
+		font-family:$sans-serif;
 		.caption {
 			font-style: italic;
 			color:$color-midtone;
