--- a/somerandomdude/stylesheets/css/footer.css
+++ b/somerandomdude/stylesheets/css/footer.css
@@ -12,7 +12,9 @@
   padding-bottom: 60px;
   margin-left: 0; }
   #twitter_follow p {
-    font: italic 20px/30px Georgia, "Times New Roman", Times, serif;
+    font-style: italic;
+    font-size: 20px;
+    font-family: Georgia, "Times New Roman", Times, serif;
     text-shadow: 0px -1px 0px rgba(5, 0, 0, 0.3); }
   #twitter_follow a {
     margin-left: 10px; }
@@ -21,14 +23,17 @@
   #twitter_follow small {
     display: block;
     margin-top: 30px;
-    font: 11px/14px "Helvetica Neue", Helvetica, Arial, sans-serif; }
+    font-size: 11px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 .recommended dt {
-  font: 700 13px/19px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: 0px -1px 0px rgba(5, 0, 0, 0.3);
   margin-bottom: 2px; }
 .recommended dd {
-  font: 11px/14px Georgia, "Times New Roman", Times, serif;
+  font-size: 11px;
+  font-family: Georgia, "Times New Roman", Times, serif;
   color: #f0eceb;
   margin-bottom: 15px; }
 
@@ -55,13 +60,13 @@
       padding-top: 30px;
       padding-right: 5%; }
       #text-10 #footer_main_promo .content .header {
-        font: 20px/30px "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 20px;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         display: block;
         text-shadow: 0px -1px 0px rgba(5, 0, 0, 0.3); }
       #text-10 #footer_main_promo .content .caption {
         display: block;
         font-size: 11px;
-        line-height: 14px;
         margin-top: 15px;
         font-style: italic; }
 
