--- a/somerandomdude/stylesheets/css/sidebar.css
+++ b/somerandomdude/stylesheets/css/sidebar.css
@@ -13,7 +13,8 @@ aside .widget {
 
 @media only screen and  (max-width: 767px) {
   #bio_pic {
-    font: 17px/27px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #5d504f;
     background: none;
     width: auto;
