--- a/somerandomdude/stylesheets/scss/footer.scss
+++ b/somerandomdude/stylesheets/scss/footer.scss
@@ -14,19 +14,32 @@
 	margin-top:-60px;
 	padding-bottom:60px;
 	margin-left:0;
-	p { font:italic $font-large $serif; text-shadow:0px -1px 0px rgba(5,0,0,.3); }
+	p { 
+		font-style:italic; 
+		font-size:$font-large;
+		font-family:$serif; 
+		text-shadow:0px -1px 0px rgba(5,0,0,.3); 
+	}
 	a { margin-left:10px; }
 	a:hover { color:$color_highlight; }
-	small { display:block; margin-top:$row-height*2; font:$font-x-small $sans-serif; }
+	small { 
+		display:block; 
+		margin-top:$row-height*2; 
+		font-size:$font-x-small; 
+		font-family:$sans-serif; 
+	}
 }
 
 .recommended {
 	dt {
-		font:$bold $font-small $sans-serif; text-shadow:0px -1px 0px rgba(5,0,0,.3);
+		font-size:$font-small;
+		font-family:$sans-serif; 
+		text-shadow:0px -1px 0px rgba(5,0,0,.3);
 		margin-bottom:2px;
 	}
 	dd {
-		font:$font-x-small $serif;
+		font-size:$font-x-small;
+		font-family:$serif;
 		color:$color_light;
 		margin-bottom:15px;
 	}
@@ -56,7 +69,8 @@
 			padding-top: $row-height * 2;
 			padding-right: 5%;
 			.header {
-				font: $font-large $sans-serif;
+				font-size: $font-large;
+				font-family: $sans-serif;
 				display: block;
 				text-shadow:0px -1px 0px rgba(5,0,0,.3); 
 				}
