Massive cleanup for Wordpress theme submission
* Fixed theme namespace
* Added ChangeLog from Github
* Added support for post-thumbnail
* Cleaned up sections of CSS

--- a/frank/stylesheets/scss/header.scss
+++ b/frank/stylesheets/scss/header.scss
@@ -6,7 +6,7 @@
 		padding-bottom:$row-height;
 		margin:$row-height 0 $row-height * 2 0;
 		
-		h1 { font-size: $large; }
+		h1 { font-size: $x-large; }
 		h2 { margin-top:0; }
 		nav {
 			.menu {
