--- a/frank/stylesheets/css/global.css
+++ b/frank/stylesheets/css/global.css
@@ -25,7 +25,7 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  line-height: 1.4;
+  line-height: 1.3;
   padding-top: 0px;
   margin-bottom: 15px; }
 
@@ -228,11 +228,16 @@ header {
 .crop {
   overflow: hidden; }
 
+.alignleft, .alignright, .aligncenter {
+  margin: 10px 0 15px 0; }
+
 .alignleft {
-  float: left !important; }
+  float: left !important;
+  margin-right: 15px; }
 
 .alignright {
-  float: right !important; }
+  float: right !important;
+  margin-left: 15px; }
 
 .aligncenter {
   display: block;
@@ -240,15 +245,17 @@ header {
   margin-right: auto; }
 
 .wp-caption {
-  text-align: center; }
+  text-align: center;
+  margin-top: 10px 0 15px 0; }
   .wp-caption img {
     margin: 0;
     padding: 0;
     border: 0 none; }
-  .wp-caption p.wp-caption-text {
-    font-size: 11px;
-    padding: 5px 4px 0 0;
-    margin: 15px; }
+
+.wp-caption-text {
+  font-size: 13px !important;
+  color: #5d504f;
+  margin-top: 10px; }
 
 .truncate {
   white-space: nowrap;
