--- a/frank/stylesheets/scss/global.scss
+++ b/frank/stylesheets/scss/global.scss
@@ -25,7 +25,7 @@ a:hover { color: $color_accent_alt; }
 h1, h2, h3, h4, h5, h6 {
 	font-family: $sans-serif;
 	font-weight: $normal;
-	line-height:1.4;
+	line-height:1.3;
 	padding-top: 0px; 
 	margin-bottom: $row-height; 
 }
@@ -197,8 +197,11 @@ header {
 .more-link { font-style: italic;  }
 .hidden { display: none; }
 .crop { overflow: hidden; }
-.alignleft { float: left !important; }
-.alignright { float: right !important; }
+.alignleft, .alignright, .aligncenter {
+	margin:10px 0 $row-height 0;
+}
+.alignleft { float: left !important; margin-right:15px; }
+.alignright { float: right !important; margin-left:15px; }
 .aligncenter {
 	display: block;
 	margin-left: auto;
@@ -207,17 +210,20 @@ header {
 
 .wp-caption {
 	text-align: center;
+	margin-top:10px 0 $row-height 0;
 	img {
 		margin: 0;
 		padding: 0;
 		border: 0 none; 
 	}
-	p.wp-caption-text {
-		font-size: $x-small;
-		padding: 5px 4px 0 0;
-		margin: $row-height; 
-	} 
 }
+
+.wp-caption-text {
+	font-size: $small !important;
+	color:$color-midtone;
+	margin-top:10px;
+}
+
 .truncate {
     white-space: nowrap;
     overflow: hidden;
