--- a/frank/stylesheets/css/comments.css
+++ b/frank/stylesheets/css/comments.css
@@ -11,6 +11,8 @@
     #comments_container #comments li.comment {
       margin: 60px 0;
       background: none; }
+    #comments_container #comments li.comment.bypostauthor {
+      margin: 45px 0; }
     #comments_container #comments li:first-child {
       margin-top: 0px; }
     #comments_container #comments .content {
@@ -28,28 +30,29 @@
     font-size: 28px;
     margin: 30px 0;
     color: #5d504f; }
-  #comments_container #commentform input[type=text], #comments_container #commentform textarea {
+  #comments_container #respond input[type=text], #comments_container #respond textarea {
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%; }
-  #comments_container #commentform label {
+  #comments_container #respond label {
     display: none; }
-  #comments_container #commentform #comment_form_info input[type=text] {
+  #comments_container #respond #comment_form_info input[type=text] {
     margin-bottom: 15px;
     text-align: right; }
-  #comments_container #commentform textarea {
+  #comments_container #respond textarea {
     margin: 0;
     height: 118px; }
-  #comments_container #commentform textarea:focus {
+  #comments_container #respond textarea:focus {
     height: 375px; }
   #comments_container #comment_form header h1 {
     font-size: 20px; }
   #comments_container #comment_form header .loggedin {
     font-style: italic; }
   #comments_container #submit {
-    margin-top: 15px; }
+    margin-top: 15px;
+    margin-left: 26.1%; }
 
 /*MOBILE*/
 @media only screen and  (max-width: 767px) {
