--- a/frank/stylesheets/scss/global.scss
+++ b/frank/stylesheets/scss/global.scss
@@ -197,6 +197,15 @@ header {
 .more-link { font-style: italic;  }
 .hidden { display: none; }
 .crop { overflow: hidden; }
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+}
+
+
+/*Wordpress Classes*/
 .alignleft, .alignright, .aligncenter {
 	margin:10px 0 $row-height 0;
 }
@@ -224,11 +233,19 @@ header {
 	margin-top:10px;
 }
 
-.truncate {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
+.gallery-caption {
+	
+}
+
+.sticky {
+	
+}
+
+.bypostauthor {
+	border:2px solid $color-midtone;
+	padding:$row-height 0;
+	border-left:0;
+	border-right:0;
 }
 
 /*Pagination links*/
