--- a/somerandomdude/stylesheets/css/pages.css
+++ b/somerandomdude/stylesheets/css/pages.css
@@ -174,6 +174,21 @@ ul#projects_list {
 #p6975 .slideshow .slide-a, #p6975 .slideshow .slide-b {
   background-image: url("/wp-content/images/pages/off_franklin/off_franklin_sprite.jpg"); }
 
+/*Frank*/
+#p4537 #info {
+  margin-top: 30px; }
+
+#p4537 #features h3 {
+  font-size: 24px;
+  margin-top: 60px; }
+
+#p4537 #features h3:first-child {
+  font-size: 24px;
+  margin-top: 30px; }
+
+#p4537 #features .feature p {
+  font-size: 17px; }
+
 @media only screen and  (max-width: 767px) {
   #content.page #projects_navigation {
     display: none; }
