--- a/frank/stylesheets/scss/global.scss
+++ b/frank/stylesheets/scss/global.scss
@@ -234,11 +234,11 @@ header {
 }
 
 .gallery-caption {
-	
+	text-rendering: optimizelegibility; 
 }
 
 .sticky {
-	
+	text-rendering: optimizelegibility; 
 }
 
 .bypostauthor {
