--- a/somerandomdude/stylesheets/scss/pages.scss
+++ b/somerandomdude/stylesheets/scss/pages.scss
@@ -211,6 +211,10 @@ ul#projects_list {
 #p4537 #features .feature p {
 	font-size:$medium;
 }
+
+#p5215 object {
+	height:350px;
+}
 	
 	
 @media only screen and  (max-width: 767px) {
